# super-simple-ssh-client

./: Cargo.toml  README.md  vcpkg.json
.github/workflows/: release.yml
packaging/: ss-ssh.desktop
packaging/arch/: PKGBUILD
packaging/rpm/: ss-ssh.spec
src/: app.rs  main.rs  model.rs  ssh.rs  storage.rs  ui.rs
src/app/: connections.rs  constants.rs  handlers.rs  helpers.rs  logging.rs  mod.rs  pickers.rs  ssh_backend.rs  terminal.rs  transfer.rs
src/ui/: constants.rs  helpers.rs  mod.rs  modals.rs  panels.rs  pickers.rs
