[package]
name = "super-simple-ssh-client"
version = "0.1.0"
edition = "2024"
authors = ["hansen_docked_in <hansdrum@proton.me>"]
license = "MIT"
description = "Terminal SSH client with a ratatui interface"
homepage = "https://github.com/HansenBerlin/super-simple-ssh-client"
repository = "https://github.com/HansenBerlin/super-simple-ssh-client"

[[bin]]
name = "ss-ssh"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "hansen_docked_in <hansdrum@proton.me>"
section = "net"
priority = "optional"
depends = "libssl3"
assets = [
  ["target/release/ss-ssh", "usr/bin/ss-ssh", "755"],
  ["packaging/ss-ssh.desktop", "usr/share/applications/ss-ssh.desktop", "644"]
]

[package.metadata.rpm]
summary = "Super simple SSH client"
description = "Terminal SSH client with a ratatui interface"
license = "MIT"
targets = ["ss-ssh"]
assets = [
  { source = "target/release/ss-ssh", dest = "/usr/bin/ss-ssh", mode = "755" },
  { source = "packaging/ss-ssh.desktop", dest = "/usr/share/applications/ss-ssh.desktop", mode = "644" }
]
[package.metadata.rpm.cargo]
buildflags = ["--release", "--locked"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0"
base64 = "0.22.1"
chrono = "0.4.39"
crossterm = "0.29.0"
dirs = "6.0.0"
pbkdf2 = "0.12.2"
rand_core = { version = "0.9.5", features = ["os_rng"] }
ratatui = "0.30.0"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
ssh2 = "0.9"
